player movement mvp complete monster population complete

--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
     <title>5 Room Dungeon Generator</title>
 </head>
 <body id="wrapper">  
-    <div class='container-fluid'>
+    <div class='container-fluid' >
         <div class='row justify-content-center'><h1>MAP SCREEN</h1>
         </div>
-        <div class='row justify-content-center'><h1><span>|>>>>>>>>>>>>>>>>>>>>>>>><<<<<<<<<<<<<<<<<<<<<<<<<|</span></h1></div>
+        <div class='row justify-content-center'><h5><span>|>>>>>>>>>>>>>>>>>>>>>>>><<<<<<<<<<<<<<<<<<<<<<<<<|</span></h5></div>
         
         <div class='row justify-content-center'>
             <div id="grid-holder2"></div>
@@ -26,6 +26,7 @@
 
 <script src="JS/maps.js"></script>
 <script src="JS/agent.js"></script>
+<script src="JS/enemy.js"></script>
 <script src="JS/app.js"></script>
 </body>
 </html>
