map parser additions

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <title>5 Room Dungeon Generator</title>
 </head>
 <body id="wrapper">  
-    <div class='container-fluid' >
+    <div class='container-fluid' id="gamespace">
         <div class='row justify-content-center'><h1>MAP SCREEN</h1>
         </div>
         <div class='row justify-content-center'><h5><span>|>>>>>>>>>>>>>>>>>>>>>>>><<<<<<<<<<<<<<<<<<<<<<<<<|</span></h5></div>
