refinement and pruning

--- a/index.html
+++ b/index.html
@@ -11,13 +11,12 @@
 <body >  
     <div id="wrapper">
         <div class='container-fluid' >
-            <div class='row justify-content-center'><h1>MAP SCREEN</h1>
-            </div>
-            <!-- <div class='row justify-content-center'><h5><span>|>>>>>>>>>>>>>>>>>>>>>>>><<<<<<<<<<<<<<<<<<<<<<<<<|</span></h5></div> -->
+            <div class='row justify-content-center'><h1>MAP SCREEN</h1></div>
+            <div class='row justify-content-center' id="startButton"></div>
+            <div class='row justify-content-center' id="timerDisplay"></div>
+            <div class='row justify-content-center'><h5><span>|>>>>>>>>>>>>>>>>>>>>>>>><<<<<<<<<<<<<<<<<<<<<<<<<|</span></h5></div>
             <div class='row justify-content-center' id="game-space">
                 <div id="grid-holder0"></div>
-                <div id="grid-holder1"></div>
-                <div id="grid-holder2"></div>
             </div>
         </div>
     </div>
