still having responsive display issues

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=.50">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" crossorigin="anonymous">
     <link  rel="stylesheet" href="css/style.css">
@@ -14,15 +14,14 @@
         <div class="col align-middle" id="header">
                 <div class='row justify-content-center gameContent'><h1 id="title">MAP SCREEN</h1></div>
                 <div class='row justify-content-center gameContent' id="startButton"></div>
-                <div class='row justify-content-center gameContent' id="timerDisplay"></div>
-                <div class='row justify-content-center gameContent'><h5><span>PUT BANNER GRAPHIC HERE</span></h5></div>
         </div>
     </div>
     <div class="container-fluid" >
         <div class="row justify-content-center" id="game-space">
                 <div class="row justify-content-center" id="wrapper">
-                    <div class="col-sm-7" id="grid-holder0"></div>
-                    <div class="col float-sm-right" id="playerCol"> 
+                    <div class="col-7" id="grid-holder0"></div>
+                    <div class="col" id="playerCol">
+                        <div class='row justify-content-center playeringo' id="timerDisplay"></div> 
                         <div class="row justify-content-center playerInfo"><span id="playerName"></span></div>
                         <div class="row justify-content-center playerInfo" ><span id="playerHP" class="row justify-content-center playerInfo"></span></div>
                         <div class="row justify-content-center playerInfo" ><span id="playerTorch" class="row justify-content-center playerInfo"></span></div>
