--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 <div class="row justify-content-center" id="wrapper">
                     <div class="col-7" id="grid-holder0"></div>
                     <div class="col" id="playerCol">
-                        <div class='row justify-content-center playeringo' id="timerDisplay"></div> 
+                        <div class='row justify-content-center playerinfo' id="timerDisplay"></div> 
                         <div class="row justify-content-center playerInfo"><span id="playerName"></span></div>
                         <div class="row justify-content-center playerInfo" ><span id="playerHP" class="row justify-content-center playerInfo"></span></div>
                         <div class="row justify-content-center playerInfo" ><span id="playerTorch" class="row justify-content-center playerInfo"></span></div>
