--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                         <div class="row justify-content-center playerInfo"><span id="playerName"></span></div>
                         <div class="row justify-content-center playerInfo" ><span id="playerHP" class="row justify-content-center playerInfo"></span></div>
                         <div class="row justify-content-center playerInfo" ><span id="playerTorch" class="row justify-content-center playerInfo"></span></div>
-                        <div class="row justify-content-center playerInfo" ><span id="playerInventory"></span></div>
+                        <div class="row justify-content-center playerInfo" ><ul id="playerInventory"></ul></div>
                         <div class="row justify-content-center playerInfo" id="game-info">
                                 <div class="col-7 game-info-item">Doors:<span id="doorCounter" >X</span></div>
                                 <div class="col-7 game-info-item">Treasure:<span id="treasureCounter" >X</span></div>
