adding script type

--- a/index.html
+++ b/index.html
@@ -84,11 +84,11 @@
             integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
             crossorigin="anonymous"></script>
 
-        <script src="JS/assets.js"></script>
-        <script src="JS/map-render.js"></script>
-        <script src="JS/player.js"></script>
-        <script src="JS/enemy.js"></script>
-        <script src="JS/app.js"></script>
+        <script src="JS/assets.js" type="text/javascript"></script>
+        <script src="JS/map-render.js" type="text/javascript"></script>
+        <script src="JS/player.js" type="text/javascript"></script>
+        <script src="JS/enemy.js"type="text/javascript"></script>
+        <script src="JS/app.js" type="text/javascript"></script>
 
     </scrip>
     </body>
