--- a/index.html
+++ b/index.html
@@ -82,11 +82,11 @@
             integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
             crossorigin="anonymous" type="text/javascript"></script> -->
 
-        <script src="./JS/assets.js" type="text/javascript"></script>
-        <script src="./JS/map-render.js" type="text/javascript"></script>
-        <script src="./JS/player.js" type="text/javascript"></script>
-        <script src="./JS/enemy.js"type="text/javascript"></script>
-        <script src="./JS/app.js" type="text/javascript"></script>
+        <script src="./js/assets.js" type="text/javascript"></script>
+        <script src="./js/map-render.js" type="text/javascript"></script>
+        <script src="./js/player.js" type="text/javascript"></script>
+        <script src="./js/enemy.js"type="text/javascript"></script>
+        <script src="./js/app.js" type="text/javascript"></script>
     </body>
 
 </html>
